--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <a href="./index.html" lang="en" class="logo logo--indent"
           ><span class="logo__particle">Web</span>Studio</a
@@ -59,21 +59,21 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Сервис бизнес возможностей -->
-      <section class="hero section">
+      <!-- <section class="hero section">
         <div class="container">
           <h1 class="hero__headline">Эффективные решения для вашего бизнеса</h1>
           <button class="hero__button" type="button" data-modal-open>Заказать услугу</button>
         </div>
-      </section>
+      </section> -->
       <!-- Наши преимущества -->
       <section class="strengths-group section">
         <div class="container">
           <ul class="strengths-group__list">
-            <li>
+            <li class="strengths-group__item">
               <div class="strengths-group__icon">
                 <svg class="strengths-icon"><use href="./photo/svg/icons.svg#antenna"></use></svg>
               </div>
@@ -82,7 +82,7 @@
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="strengths-group__item">
               <div class="strengths-group__icon">
                 <svg class="strengths-icon"><use href="./photo/svg/icons.svg#clock"></use></svg>
               </div>
@@ -91,7 +91,7 @@
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="strengths-group__item">
               <div class="strengths-group__icon">
                 <svg class="strengths-icon"><use href="./photo/svg/icons.svg#diagram"></use></svg>
               </div>
@@ -100,7 +100,7 @@
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="strengths-group__item">
               <div class="strengths-group__icon">
                 <svg class="strengths-icon"><use href="./photo/svg/icons.svg#astronaut"></use></svg>
               </div>
@@ -113,11 +113,11 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="task-section section">
+      <!-- <section class="task-section section">
         <div class="container">
           <h2 class="headline">Чем мы занимаемся</h2>
           <ul class="task-section__list">
-            <li class="task-section__item">
+            <li class="strengths-group__item" class="task-section__item">
               <img
                 class="task-section__img"
                 width="370"
@@ -156,7 +156,8 @@
           </ul>
         </div>
       </section>
-      <!-- Наша команда -->
+      -->
+      <!--  Наша команда -->
       <section class="teammates section">
         <div class="container">
           <h2 class="headline">Наша команда</h2>
@@ -400,7 +401,7 @@
           </address>
         </div>
 
-        <div>
+        <div class="footer__wrap-networks">
           <h2 class="footer__title">присоединяйтесь</h2>
           <ul class="footer__networks">
             <li>
