add adaptive , corrections

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__container">
         <a href="./index.html" lang="en" class="logo logo--indent"
           ><span class="logo__particle">Web</span>Studio</a
         >
         <nav class="header__nav">
+          <button class="header__mob-menu-btn">
+            <svg class="header__mob-svg">
+              <use href="./photo/svg/icons.svg#mobile-nav-icon"></use>
+            </svg>
+          </button>
           <ul class="header__menu">
             <li class="header__item">
               <a class="header__link header__link--active" href="./index.html">Студия</a>
@@ -59,16 +64,16 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- Сервис бизнес возможностей -->
-      <!-- <section class="hero section">
+      <section class="hero section">
         <div class="container">
           <h1 class="hero__headline">Эффективные решения для вашего бизнеса</h1>
           <button class="hero__button" type="button" data-modal-open>Заказать услугу</button>
         </div>
-      </section> -->
+      </section>
       <!-- Наши преимущества -->
       <section class="strengths-group section">
         <div class="container">
@@ -113,11 +118,11 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <!-- <section class="task-section section">
+      <section class="task-section section">
         <div class="container">
           <h2 class="headline">Чем мы занимаемся</h2>
           <ul class="task-section__list">
-            <li class="strengths-group__item" class="task-section__item">
+            <li class="task-section__item">
               <img
                 class="task-section__img"
                 width="370"
@@ -156,7 +161,7 @@
           </ul>
         </div>
       </section>
-      -->
+
       <!--  Наша команда -->
       <section class="teammates section">
         <div class="container">
@@ -174,28 +179,28 @@
                 <h3 class="teammates__name">Игорь Демьяненко</h3>
                 <p class="teammates__text" lang="en">Product Designer</p>
                 <ul class="teammates__networks">
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#linkedin"></use>
@@ -217,28 +222,28 @@
                 <h3 class="teammates__name">Ольга Репина</h3>
                 <p class="teammates__text" lang="en">Frontend Developer</p>
                 <ul class="teammates__networks">
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#linkedin"></use>
@@ -260,28 +265,28 @@
                 <h3 class="teammates__name">Николай Тарасов</h3>
                 <p class="teammates__text" lang="en">Marketing</p>
                 <ul class="teammates__networks">
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#linkedin"></use>
@@ -303,28 +308,28 @@
                 <h3 class="teammates__name">Михаил Ермаков</h3>
                 <p class="teammates__text" lang="en">UI Designer</p>
                 <ul class="teammates__networks">
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teammates__item">
+                  <li class="teammates__item-network">
                     <a href="" class="teammates__link">
                       <svg class="teammates__svg">
                         <use href="./photo/svg/icons.svg#linkedin"></use>
@@ -383,56 +388,58 @@
     </main>
     <footer class="footer">
       <div class="container footer__container">
-        <div class="address-container">
-          <a href="./index.html" lang="en" class="logo footer__logo">
-            <span class="footer__logo footer__logo--blue-part">Web</span>Studio
-          </a>
+        <div class="footer__tablet-container">
+          <div class="address-container">
+            <a href="./index.html" lang="en" class="logo footer__logo">
+              <span class="footer__logo footer__logo--blue-part">Web</span>Studio
+            </a>
 
-          <address class="footer__info">
-            <p class="footer__location">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="footer__contacts">
-              <li class="footer__mail">
-                <a class="footer__link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+            <address class="footer__info">
+              <p class="footer__location">г. Киев, пр-т Леси Украинки, 26</p>
+              <ul class="footer__contacts">
+                <li class="footer__mail">
+                  <a class="footer__link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+                </li>
+                <li>
+                  <a class="footer__link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer__wrap-networks">
+            <h2 class="footer__title">присоединяйтесь</h2>
+            <ul class="footer__networks">
+              <li>
+                <a class="footer__links" href=""
+                  ><svg class="footer__svg">
+                    <use href="./photo/svg/icons.svg#instagram"></use></svg
+                ></a>
               </li>
               <li>
-                <a class="footer__link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="footer__links" href=""
+                  ><svg class="footer__svg">
+                    <use href="./photo/svg/icons.svg#twitter"></use></svg
+                ></a>
+              </li>
+              <li>
+                <a class="footer__links" href=""
+                  ><svg class="footer__svg">
+                    <use href="./photo/svg/icons.svg#facebook"></use></svg
+                ></a>
+              </li>
+              <li>
+                <a class="footer__links" href=""
+                  ><svg class="footer__svg">
+                    <use href="./photo/svg/icons.svg#linkedin"></use></svg
+                ></a>
               </li>
             </ul>
-          </address>
-        </div>
-
-        <div class="footer__wrap-networks">
-          <h2 class="footer__title">присоединяйтесь</h2>
-          <ul class="footer__networks">
-            <li>
-              <a class="footer__links" href=""
-                ><svg class="footer__svg">
-                  <use href="./photo/svg/icons.svg#instagram"></use></svg
-              ></a>
-            </li>
-            <li>
-              <a class="footer__links" href=""
-                ><svg class="footer__svg">
-                  <use href="./photo/svg/icons.svg#twitter"></use></svg
-              ></a>
-            </li>
-            <li>
-              <a class="footer__links" href=""
-                ><svg class="footer__svg">
-                  <use href="./photo/svg/icons.svg#facebook"></use></svg
-              ></a>
-            </li>
-            <li>
-              <a class="footer__links" href=""
-                ><svg class="footer__svg">
-                  <use href="./photo/svg/icons.svg#linkedin"></use></svg
-              ></a>
-            </li>
-          </ul>
+          </div>
         </div>
 
         <form class="footer__form">
-          <div class="">
+          <div>
             <strong class="footer__title">Подпишитесь на рассылку</strong>
             <input class="footer__input" name="email" type="email" placeholder="Email" />
           </div>
@@ -445,7 +452,53 @@
         </form>
       </div>
     </footer>
+    <div class="mobile-menu">
+      <!-- mob menu nav -->
+      <ul class="mobile-menu__nav">
+        <li class="mobile-menu__items-nav">
+          <a href="" class="mobile-menu__links-nav mobile-menu__links-nav--active">Студия</a>
+        </li>
+        <li class="mobile-menu__items-nav">
+          <a href="" class="mobile-menu__links-nav">Портфолио</a>
+        </li>
+        <li class="mobile-menu__items-nav">
+          <a href="" class="mobile-menu__links-nav">Контакты </a>
+        </li>
+      </ul>
 
+      <!-- mob menu contacts -->
+      <ul class="mobile-menu__contacts">
+        <li class="mobile-menu__items-contacts">
+          <a
+            href="tel:+38 096 111 11 11"
+            class="mobile-menu__links-contacts mobile-menu__links-contacts--phone"
+            >+38 096 111 11 11</a
+          >
+        </li>
+        <li class="mobile-menu__items-contacts">
+          <a
+            href="mailto:info@devstudio.com"
+            class="mobile-menu__links-contacts mobile-menu__links-contacts--email"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <!-- mob menu networks -->
+      <ul class="mobile-menu__networks">
+        <li class="mobile-menu__items-networks">
+          <a href="" class="mobile-menu__links-networks">Instagram</a>
+        </li>
+        <li class="mobile-menu__items-networks">
+          <a href="" class="mobile-menu__links-networks">Twitter </a>
+        </li>
+        <li class="mobile-menu__items-networks">
+          <a href="" class="mobile-menu__links-networks">Facebook </a>
+        </li>
+        <li class="mobile-menu__items-networks">
+          <a href="" class="mobile-menu__links-networks">LinkedIn </a>
+        </li>
+      </ul>
+    </div>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal__btn-close" type="button" data-modal-close>
@@ -505,5 +558,6 @@
       </div>
     </div>
     <script src="./scripts/modal.js"></script>
+    <script src="./scripts/mobile-menu.js"></script>
   </body>
 </html>
