add mobile menu

--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
         </form>
       </div>
     </footer>
+    <!-- Mobile menu header -->
     <div class="mobile-menu">
       <!-- mob menu nav -->
       <ul class="mobile-menu__nav">
