--- a/portfolio.html
+++ b/portfolio.html
@@ -364,5 +364,54 @@
         </form>
       </div>
     </footer>
+    <!-- Mobile menu header -->
+    <div class="mobile-menu">
+      <!-- mob menu nav -->
+      <ul class="mobile-menu__nav">
+        <li class="mobile-menu__items-nav">
+          <a href="" class="mobile-menu__links-nav mobile-menu__links-nav--active">Студия</a>
+        </li>
+        <li class="mobile-menu__items-nav">
+          <a href="" class="mobile-menu__links-nav">Портфолио</a>
+        </li>
+        <li class="mobile-menu__items-nav">
+          <a href="" class="mobile-menu__links-nav">Контакты </a>
+        </li>
+      </ul>
+
+      <!-- mob menu contacts -->
+      <ul class="mobile-menu__contacts">
+        <li class="mobile-menu__items-contacts">
+          <a
+            href="tel:+38 096 111 11 11"
+            class="mobile-menu__links-contacts mobile-menu__links-contacts--phone"
+            >+38 096 111 11 11</a
+          >
+        </li>
+        <li class="mobile-menu__items-contacts">
+          <a
+            href="mailto:info@devstudio.com"
+            class="mobile-menu__links-contacts mobile-menu__links-contacts--email"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <!-- mob menu networks -->
+      <ul class="mobile-menu__networks">
+        <li class="mobile-menu__items-networks">
+          <a href="" class="mobile-menu__links-networks">Instagram</a>
+        </li>
+        <li class="mobile-menu__items-networks">
+          <a href="" class="mobile-menu__links-networks">Twitter </a>
+        </li>
+        <li class="mobile-menu__items-networks">
+          <a href="" class="mobile-menu__links-networks">Facebook </a>
+        </li>
+        <li class="mobile-menu__items-networks">
+          <a href="" class="mobile-menu__links-networks">LinkedIn </a>
+        </li>
+      </ul>
+    </div>
+    <script src="./scripts/mobile-menu.js"></script>
   </body>
 </html>
