--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           ><span class="logo__particle">Web</span>Studio</a
         >
         <nav class="header__nav">
-          <button class="header__mob-menu-btn">
+          <button class="header__mob-menu-btn" type="button" data-menu-open>
             <svg class="header__mob-svg">
               <use href="./photo/svg/icons.svg#mobile-nav-icon"></use>
             </svg>
@@ -452,54 +452,65 @@
         </form>
       </div>
     </footer>
+
     <!-- Mobile menu header -->
-    <div class="mobile-menu">
+    <div class="mobile-menu" data-menu>
       <!-- mob menu nav -->
+      <button class="mobile-menu__close-btn" type="button" data-menu-close>
+        <svg class="mobile-menu__close-svg">
+          <use href="./photo/svg/icons.svg#close-mobile"></use>
+        </svg>
+      </button>
+
       <ul class="mobile-menu__nav">
         <li class="mobile-menu__items-nav">
-          <a href="" class="mobile-menu__links-nav mobile-menu__links-nav--active">Студия</a>
+          <a href="./index.html" class="mobile-menu__links-nav mobile-menu__links-nav--active"
+            >Студия</a
+          >
         </li>
         <li class="mobile-menu__items-nav">
-          <a href="" class="mobile-menu__links-nav">Портфолио</a>
+          <a href="./portfolio.html" class="mobile-menu__links-nav">Портфолио</a>
         </li>
         <li class="mobile-menu__items-nav">
           <a href="" class="mobile-menu__links-nav">Контакты </a>
         </li>
       </ul>
-
-      <!-- mob menu contacts -->
-      <ul class="mobile-menu__contacts">
-        <li class="mobile-menu__items-contacts">
-          <a
-            href="tel:+38 096 111 11 11"
-            class="mobile-menu__links-contacts mobile-menu__links-contacts--phone"
-            >+38 096 111 11 11</a
-          >
-        </li>
-        <li class="mobile-menu__items-contacts">
-          <a
-            href="mailto:info@devstudio.com"
-            class="mobile-menu__links-contacts mobile-menu__links-contacts--email"
-            >info@devstudio.com</a
-          >
-        </li>
-      </ul>
-      <!-- mob menu networks -->
-      <ul class="mobile-menu__networks">
-        <li class="mobile-menu__items-networks">
-          <a href="" class="mobile-menu__links-networks">Instagram</a>
-        </li>
-        <li class="mobile-menu__items-networks">
-          <a href="" class="mobile-menu__links-networks">Twitter </a>
-        </li>
-        <li class="mobile-menu__items-networks">
-          <a href="" class="mobile-menu__links-networks">Facebook </a>
-        </li>
-        <li class="mobile-menu__items-networks">
-          <a href="" class="mobile-menu__links-networks">LinkedIn </a>
-        </li>
-      </ul>
+      <div>
+        <!-- mob menu contacts -->
+        <ul class="mobile-menu__contacts">
+          <li class="mobile-menu__items-contacts">
+            <a
+              href="tel:+38 096 111 11 11"
+              class="mobile-menu__links-contacts mobile-menu__links-contacts--phone"
+              >+38 096 111 11 11</a
+            >
+          </li>
+          <li class="mobile-menu__items-contacts">
+            <a
+              href="mailto:info@devstudio.com"
+              class="mobile-menu__links-contacts mobile-menu__links-contacts--email"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <!-- mob menu networks -->
+        <ul class="mobile-menu__networks">
+          <li class="mobile-menu__items-networks">
+            <a href="" class="mobile-menu__links-networks">Instagram</a>
+          </li>
+          <li class="mobile-menu__items-networks">
+            <a href="" class="mobile-menu__links-networks">Twitter </a>
+          </li>
+          <li class="mobile-menu__items-networks">
+            <a href="" class="mobile-menu__links-networks">Facebook </a>
+          </li>
+          <li class="mobile-menu__items-networks">
+            <a href="" class="mobile-menu__links-networks">LinkedIn </a>
+          </li>
+        </ul>
+      </div>
     </div>
+    <!-- MODAL WINDOW -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal__btn-close" type="button" data-modal-close>
