--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
         <ul class="mobile-menu__contacts">
           <li class="mobile-menu__items-contacts">
             <a
-              href="tel:+38 096 111 11 11"
+              href="tel:+380961111111"
               class="mobile-menu__links-contacts mobile-menu__links-contacts--phone"
               >+38 096 111 11 11</a
             >
